
file(GLOB_RECURSE ${PROJECT_NAME}_headers *.h)
file(GLOB_RECURSE ${PROJECT_NAME}_sources *.cpp)

set(ENABLE_D3D12 OFF)
set(ENABLE_METAL OFF)
if (WIN32)
    set(ENABLE_D3D12 ON)
elseif(APPLE)
    set(ENABLE_METAL ON)
endif()

option(D3D12_ENABLED "Enable compilation of the D3D12 backend" ${ENABLE_D3D12})
option(METAL_ENABLED "Enable compilation of the Metal backend" ${ENABLE_METAL})
option(NULL_ENABLED "Enable compilation of the Null backend" ON)
option(OPENGL_ENABLED "Enable compilation of the OpenGL backend" ON)
option(VULKAN_ENABLED "Enable compilation of the Vulkan backend" OFF)

if (NXT_ENABLE_D3D12)
    list(APPEND DEFS "NXT_ENABLE_BACKEND_D3D12")
endif()
if (NXT_ENABLE_METAL)
    list(APPEND DEFS "NXT_ENABLE_BACKEND_METAL")
endif()
if (NXT_ENABLE_NULL)
    list(APPEND DEFS "NXT_ENABLE_BACKEND_NULL")
endif()
if (NXT_ENABLE_OPENGL)
    list(APPEND DEFS "NXT_ENABLE_BACKEND_OPENGL")
endif()
if (NXT_ENABLE_VULKAN)
    list(APPEND DEFS "NXT_ENABLE_BACKEND_VULKAN")
endif()

add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_headers} ${${PROJECT_NAME}_sources})
set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY COMPILE_DEFINITIONS ${DEFS})
target_link_libraries(${PROJECT_NAME} nxt nxtcpp nxt_backend nxt_wire utils)
